--- a/W3/vectorise.ipynb
+++ b/W3/vectorise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0WitVQxu4LPdEWCYa1Pdy",
+      "authorship_tag": "ABX9TyPE2HCxl9xRZtoFVuxOy2tQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,8 +113,7 @@
         "def tokenize(doc):\n",
         "    sents = sent_tokenize(doc)\n",
         "    #stem = nltk.stem.SnowballStemmer('english')\n",
-        "    # Get only the unique words -- otherwise it's going to take a long, long time...\n",
-        "    words=list(set([word.lower() for sent in sents for word in word_tokenize(sent) if word.isalpha()]))\n",
+        "    words=([word.lower() for sent in sents for word in word_tokenize(sent) if word.isalpha()])\n",
         "    tagged_words=nltk.pos_tag(words)\n",
         "    lemmed_words=[lem.lemmatize(word[0],pos=get_pos(word[1])) if get_pos(word[1])!=\"\" else lem.lemmatize(word[0]) for word in tagged_words]\n",
         "    return lemmed_words\n",
