--- a/W3/vectorise.ipynb
+++ b/W3/vectorise.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPE2HCxl9xRZtoFVuxOy2tQ",
+      "mount_file_id": "https://github.com/nwon24/nlp/blob/main/W3/vectorise.ipynb",
+      "authorship_tag": "ABX9TyOuyf/kInd/DC0p7Gwqkvxh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,39 +46,69 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 349
+          "base_uri": "https://localhost:8080/"
         },
         "id": "9RoSfc66wh3b",
-        "outputId": "3c271e57-00cd-4a83-8474-79975ecc64e8"
+        "outputId": "8ae91961-207e-4c4e-c85d-a57d9e45223f"
       },
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'this': 0.0, 'line': 0.0, 'text': 0.0, 'contain': 0.0, 'word': 0.0}\n",
+            "{'this': 0.0, 'another': 0.053319013889226566, 'line': 0.0, 'text': 0.0, 'contain': 0.0, 'word': 0.0, 'group': 0.053319013889226566, 'ring': 0.053319013889226566, 'module': 0.053319013889226566}\n",
+            "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+            "\twith 28 stored elements and shape (2, 19)>\n",
+            "  Coords\tValues\n",
+            "  (0, 17)\t1.0\n",
+            "  (0, 5)\t1.0\n",
+            "  (0, 7)\t1.0\n",
+            "  (0, 10)\t1.0\n",
+            "  (0, 14)\t1.0\n",
+            "  (0, 1)\t1.0\n",
+            "  (0, 6)\t1.0\n",
+            "  (0, 3)\t1.0\n",
+            "  (0, 13)\t1.4054651081081644\n",
+            "  (0, 18)\t1.0\n",
+            "  (1, 17)\t1.6931471805599454\n",
+            "  (1, 5)\t1.6931471805599454\n",
+            "  (1, 7)\t2.09861228866811\n",
+            "  (1, 10)\t1.6931471805599454\n",
+            "  (1, 14)\t1.6931471805599454\n",
+            "  (1, 1)\t1.6931471805599454\n",
+            "  (1, 6)\t1.0\n",
+            "  (1, 3)\t1.0\n",
+            "  (1, 18)\t1.0\n",
+            "  (1, 2)\t1.4054651081081644\n",
+            "  (1, 9)\t1.4054651081081644\n",
+            "  (1, 15)\t1.4054651081081644\n",
+            "  (1, 16)\t1.4054651081081644\n",
+            "  (1, 11)\t1.4054651081081644\n",
+            "  (1, 0)\t1.4054651081081644\n",
+            "  (1, 4)\t1.4054651081081644\n",
+            "  (1, 12)\t1.4054651081081644\n",
+            "  (1, 8)\t1.4054651081081644\n",
+            "{'this': 17, 'is': 5, 'line': 7, 'of': 10, 'text': 14, 'and': 1, 'it': 6, 'contains': 3, 'some': 13, 'words': 18, 'another': 2, 'more': 9, 'than': 15, 'the': 16, 'other': 11, 'about': 0, 'groups': 4, 'rings': 12, 'modules': 8}\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n",
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n",
             "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
             "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger_eng.zip.\n",
-            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: 'corpus'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-84f6f60458ef>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0mcorpus\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscandir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorpusdir\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     63\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'corpus'"
+            "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
+            "[nltk_data]       date!\n",
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n"
           ]
         }
       ],
@@ -89,6 +120,8 @@
         "from nltk import FreqDist, word_tokenize, sent_tokenize\n",
         "from nltk.stem import WordNetLemmatizer\n",
         "from nltk.corpus import stopwords\n",
+        "\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "\n",
         "nltk.download('stopwords')\n",
         "nltk.download('punkt_tab')\n",
@@ -113,7 +146,7 @@
         "def tokenize(doc):\n",
         "    sents = sent_tokenize(doc)\n",
         "    #stem = nltk.stem.SnowballStemmer('english')\n",
-        "    words=([word.lower() for sent in sents for word in word_tokenize(sent) if word.isalpha()])\n",
+        "    words=[word.lower() for sent in sents for word in word_tokenize(sent) if word.isalpha() and word not in stop_words]\n",
         "    tagged_words=nltk.pos_tag(words)\n",
         "    lemmed_words=[lem.lemmatize(word[0],pos=get_pos(word[1])) if get_pos(word[1])!=\"\" else lem.lemmatize(word[0]) for word in tagged_words]\n",
         "    return lemmed_words\n",
@@ -150,7 +183,11 @@
         "\n",
         "tf_idf_words = pipeline(corpus)\n",
         "for i in tf_idf_words:\n",
-        "    print(i)"
+        "    print(i)\n",
+        "\n",
+        "tfidf = TfidfVectorizer(norm=None,smooth_idf=True,sublinear_tf=True,min_df=0.01)\n",
+        "print(tfidf.fit_transform(corpus))\n",
+        "print(tfidf.vocabulary_)"
       ]
     },
     {
@@ -159,35 +196,6 @@
       "metadata": {
         "id": "qPQFypcDkMP5"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a={'a':1,'b':2}\n",
-        "b=np.array(a)"
-      ],
-      "metadata": {
-        "id": "IsWh3kAJ0nQx",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 159
-        },
-        "outputId": "094c9d33-9599-46dd-f87f-2049b8755a84"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'np' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-6baf0d9a9b83>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'b'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
