--- a/W3/classifiers.ipynb
+++ b/W3/classifiers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQYAj4009dyxC/rZfTpqXH",
+      "authorship_tag": "ABX9TyO82TvoaGvMfPIX0HYBwtNm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "import numpy as np\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-        "from sklearn import model_selection, naive_bayes, svm\n",
+        "from sklearn import model_selection, svm\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
