--- a/W3/classifiers.ipynb
+++ b/W3/classifiers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO82TvoaGvMfPIX0HYBwtNm",
+      "authorship_tag": "ABX9TyNSnaXZwbTBzsWtlMN6fGnj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,21 +28,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DZMrGTC51ZeS",
-        "outputId": "176a480a-3c3a-4e64-f01e-efaad6f4329a"
+        "outputId": "84195823-d31c-4e14-c50e-366d06d6e27b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "SVM Accuracy ->  87.8\n",
-            "Logistic Regression Accuracy ->  87.2\n"
+            "SVM Accuracy ->  87.46666666666667\n",
+            "Logistic Regression Accuracy ->  86.63333333333333\n"
           ]
         }
       ],
@@ -77,6 +77,15 @@
         "predictions_lr=lr.predict(test_corpus_tfidf)\n",
         "print(\"Logistic Regression Accuracy -> \",accuracy_score(predictions_lr, test_label)*100)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NXRHjUX-wn5P"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
