Separate out bad predictions

--- a/W3/classifiers.ipynb
+++ b/W3/classifiers.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQYAj4009dyxC/rZfTpqXH",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -13,36 +12,27 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/nwon24/nlp/blob/main/W3/classifiers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DZMrGTC51ZeS",
-        "outputId": "176a480a-3c3a-4e64-f01e-efaad6f4329a"
+        "outputId": "f8ba25c2-df15-46d2-9b77-ba661271bf51"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "SVM Accuracy ->  87.8\n",
-            "Logistic Regression Accuracy ->  87.2\n"
+            "SVM Accuracy ->  87.73333333333333\n",
+            "Logistic regression Accuracy ->  86.8\n"
           ]
         }
       ],
@@ -55,6 +45,8 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
+        "labels=[\"NEGATIVE\",\"POSITIVE\"]\n",
+        "\n",
         "data=pd.read_csv(\"corpus.csv\",encoding=\"latin1\")\n",
         "\n",
         "tfidf  = TfidfVectorizer()\n",
@@ -65,18 +57,58 @@
         "test_label = Encoder.fit_transform(test_label)\n",
         "\n",
         "# Classifier - Algorithm - SVM\n",
+        "f=open(\"SVM_results.md\", \"w\")\n",
+        "f.write(\"# SVM CLASSIFIER\\n\\n\")\n",
         "train_corpus_tfidf=tfidf.transform(train_corpus)\n",
         "test_corpus_tfidf=tfidf.transform(test_corpus)\n",
         "SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
         "SVM.fit(train_corpus_tfidf,train_label)\n",
-        "predictions_SVM = SVM.predict(test_corpus_tfidf)\n",
-        "print(\"SVM Accuracy -> \",accuracy_score(predictions_SVM, test_label)*100)\n",
+        "#predictions_SVM = SVM.predict(test_corpus_tfidf)\n",
+        "#print(\"SVM Accuracy -> \",accuracy_score(predictions_SVM, test_label)*100)\n",
+        "correct = 0\n",
+        "n = 0\n",
+        "for readable_sample,sample,label in zip(test_corpus,test_corpus_tfidf,test_label):\n",
+        "    pred = SVM.predict(sample)\n",
+        "    n += 1\n",
+        "    if pred.item() != label:\n",
+        "        f.write(\"\\n>%s\\n\\nPredicted: %s\\n\\n Expected: %s\\n\\n\" % (readable_sample,labels[int(pred.item())],labels[int(label)]))\n",
+        "    else:\n",
+        "        correct += 1\n",
+        "print(\"SVM Accuracy -> \",correct*100/n)\n",
+        "f.write(\"\\nOverall accuracy: %.2f\" % (correct*100/n))\n",
+        "f.close()\n",
         "\n",
+        "# Logistic regression\n",
+        "n = 0\n",
+        "correct = 0\n",
+        "f=open(\"log_results.md\",\"w\")\n",
+        "f.write(\"# LOGISTIC REGRESSION\\n\\n\")\n",
         "lr=LogisticRegression()\n",
         "lr.fit(train_corpus_tfidf,train_label)\n",
-        "predictions_lr=lr.predict(test_corpus_tfidf)\n",
-        "print(\"Logistic Regression Accuracy -> \",accuracy_score(predictions_lr, test_label)*100)"
+        "#predictions_lr=lr.predict(test_corpus_tfidf)\n",
+        "#print(\"Logistic Regression Accuracy -> \",accuracy_score(predictions_lr, test_label)*100)\n",
+        "\n",
+        "for readable_sample,sample,label in zip(test_corpus,test_corpus_tfidf,test_label):\n",
+        "    pred = lr.predict(sample)\n",
+        "    n += 1\n",
+        "    if pred.item() != label:\n",
+        "        f.write(\"\\n>%s\\n\\nPredicted: %s\\n\\n Expected: %s\\n\" % (readable_sample,labels[int(pred.item())],labels[int(label)]))\n",
+        "    else:\n",
+        "        correct += 1\n",
+        "print(\"Logistic regression Accuracy -> \",correct*100/n)\n",
+        "f.write(\"\\nOverall accuracy: %.2f\" % (correct*100/n))\n",
+        "\n",
+        "f.close()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8iZ-bGhGneZE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
